output.txt
<kernel>:126:14: error: use of undeclared identifier 'pw_len'
  S->t[0] =  pw_len;
             ^
<kernel>:324:40: error: too few arguments to function call, expected 5, have 3
    blake2b_compress(pw, pw_len, digest);
    ~~~~~~~~~~~~~~~~                   ^
<kernel>:90:1: note: 'blake2b_compress' declared here
void blake2b_compress (u32x w0_t[4], u32x w1_t[4], u32x w2_t[4], u32x w3_t[4], u64x digest[8])
^
<kernel>:378:3: warning: implicit declaration of function 'm01700s' is invalid in C99
  m01700s (w, pw_len, pws, rules_buf, combs_buf, words_buf_r, tmps, hooks, bitmaps_buf_s1_a, bitmaps_buf_s1_b, bitmaps_buf_s1_c, bitmaps_buf_s1_d, bitmaps_buf_s2_a, bitmaps_buf_s2_b, bitmaps_buf_s2_c, bitmaps_buf_s2_d, plains_buf, digests_buf, hashes_shown, salt_bufs, esalt_bufs, d_return_buf, d_scryptV0_buf, d_scryptV1_buf, d_scryptV2_buf, d_scryptV3_buf, bitmap_mask, bitmap_shift1, bitmap_shift2, salt_pos, loop_pos, loop_cnt, il_cnt, digests_cnt, digests_offset);
  ^

